--- a/resto/menu.html
+++ b/resto/menu.html
@@ -142,6 +142,25 @@
 
                                 <br>
                                 <div class="row">
+                                    <div class="col-md-4">
+                                        <div class="form-group">
+                                            <label for="exampleInputFile">Image</label>
+                                            <input type="file" id="imageMenu">
+
+                                        </div>
+                                    </div>
+
+                                    <div class="col-md-4">
+                                        <label>Ingridiant</label>
+                                        <input type="text" name="Ingridian" class="form-control" id="Ingridiant" placeholder="Ingridiant">
+                                    </div>
+                                    <div class="col-md-4">
+                                        <label>Description</label>
+                                        <textarea name="description" id="Description" cols="45" rows="5"></textarea>
+                                    </div>
+
+                                </div>
+                                <div class="row">
                                     <div class="col-md-12">
                                         <div class="space20"></div>
                                         <input type="submit" onclick="AjouterMenu()" class="btn btn-default pull-right" style="width: 200px; margin-top: 20px; " value="Ajouter">
