--- a/projet/menu-image.html
+++ b/projet/menu-image.html
@@ -25,7 +25,7 @@
         <![endif]-->
 </head>
 
-<body onload="user_connected_verif() ">
+<body onload="user_connected_verif();ConsulterMenuUser() ">
     <!--[if lt IE 8]>
     <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
 <![endif]-->
@@ -63,8 +63,8 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-md-12 text-center">
-                            <h2 class="text-uppercase">Recipies</h2>
-                            <p>Tomato is a delicious restaurant website template</p>
+                            <h2 class="text-uppercase">H & N Food</h2>
+                            <p>Connecter Commander C'est Facile</p>
                         </div>
                     </div>
                 </div>
@@ -74,23 +74,16 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-md-6">
-                            <div class="single-recipe-image">
-                                <img class="img-responsive" src="img/recipie/single/1.jpg" alt="">
+                            <div class="single-recipe-image" id="imageplats">
+                                
                             </div>
                             <div class="clearfix"></div>
 
                             <br>
 
                         </div>
-                        <div class="col-md-6">
-                            <h3>Pasta With Fried Lemons</h3>
-                            <p>Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet.</p>
-
-                            <h3 class="heading-bottom-line">Descriptions</h3>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-                                Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-                            <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
-
+                        <div class="col-md-6" id="descripETingidient" >
+                            
                         </div>
                     </div>
                 </div>
@@ -104,7 +97,7 @@
                         <div class="featured-recipies">
                             <div class="fp-content">
                                 <a href="recipe_detail-image.html"><img src="img/recipie/1/1.jpg" class="img-responsive" alt="" /></a>
-                                <h4><a href="recipe_detail-image.html">Food Name</a></h4>
+                                <h4><a href="recipe_detail-image.html">HAMBURGERS MEXICAINE</a></h4>
                                 <div class="rc-ratings">
                                     <span class="fa fa-star"></span>
                                     <span class="fa fa-star active"></span>
@@ -115,7 +108,7 @@
                             </div>
                             <div class="fp-content">
                                 <a href="recipe_detail-image.html"><img src="img/recipie/1/2.jpg" class="img-responsive" alt="" /></a>
-                                <h4><a href="recipe_detail-image.html">Food Name</a></h4>
+                                <h4><a href="recipe_detail-image.html">ESCALOPE SAUCE BLANCHE</a></h4>
                                 <div class="rc-ratings">
                                     <span class="fa fa-star"></span>
                                     <span class="fa fa-star active"></span>
@@ -126,7 +119,7 @@
                             </div>
                             <div class="fp-content">
                                 <a href="recipe_detail-image.html"><img src="img/recipie/1/3.jpg" class="img-responsive" alt="" /></a>
-                                <h4><a href="recipe_detail-image.html">Food Name</a></h4>
+                                <h4><a href="recipe_detail-image.html">FILETS DE BOEUF, SAUCE AUX CHAMPIGNONS</a></h4>
                                 <div class="rc-ratings">
                                     <span class="fa fa-star"></span>
                                     <span class="fa fa-star active"></span>
@@ -137,7 +130,7 @@
                             </div>
                             <div class="fp-content">
                                 <a href="recipe_detail-image.html"><img src="img/recipie/1/4.jpg" class="img-responsive" alt="" /></a>
-                                <h4><a href="recipe_detail-image.html">Food Name</a></h4>
+                                <h4><a href="recipe_detail-image.html">FILETS DE BOEUF, SAUCE AUX CHAMPIGNONS</a></h4>
                                 <div class="rc-ratings">
                                     <span class="fa fa-star"></span>
                                     <span class="fa fa-star active"></span>
