--- a/projet/home.html
+++ b/projet/home.html
@@ -25,7 +25,7 @@
         <![endif]-->
 </head>
 
-<body onload="user_connected_verif();AfficherCatInscri()">
+<body onload="user_connected_verif();AfficherCatInscri();AffichagePannier()">
     <!--[if lt IE 8]>
     <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
 <![endif]-->
