--- a/projet/menu-image.html
+++ b/projet/menu-image.html
@@ -25,7 +25,7 @@
         <![endif]-->
 </head>
 
-<body onload="user_connected_verif();ConsulterMenuUser() ">
+<body onload="user_connected_verif();ConsulterMenuUser();AffichagePannier()">
     <!--[if lt IE 8]>
     <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
 <![endif]-->
@@ -75,15 +75,15 @@
                     <div class="row">
                         <div class="col-md-6">
                             <div class="single-recipe-image" id="imageplats">
-                                
+
                             </div>
                             <div class="clearfix"></div>
 
                             <br>
 
                         </div>
-                        <div class="col-md-6" id="descripETingidient" >
-                            
+                        <div class="col-md-6" id="descripETingidient">
+
                         </div>
                     </div>
                 </div>
