Add view confirm cmd  Pannier + page index admin

--- a/resto/pub-cons.html
+++ b/resto/pub-cons.html
@@ -21,7 +21,7 @@
     <link rel="stylesheet" href="css/font-awesome/css/font-awesome.css">
     <link rel="stylesheet" href="css/plugin.css">
     <link rel="stylesheet" href="css/main.css">
-    <link rel="stylesheet" href="C:\Users\Asus\Desktop\fivepoint html+css\JS\style1.css">
+    <link rel="stylesheet" href="../style1.css">
     <!--[if lt IE 9]>
             <script src="js/vendor/html5-3.6-respond-1.4.2.min.js"></script>
         <![endif]-->
