--- a/projet/inscription.html
+++ b/projet/inscription.html
@@ -41,7 +41,7 @@
                 <div class="container">
                     <div class="navbar-header">
 
-                        <a class="navbar-brand" href="index-2.html">
+                        <a class="navbar-brand" href="home.html">
                             <img src="img/nav-logo.png" alt="nav-logo">
                         </a>
                     </div>
