as Admin can Display Orders

--- a/projet/home.html
+++ b/projet/home.html
@@ -13,7 +13,7 @@
 
     <script src="../../cdn-cgi/apps/head/-mEFVS8y7qx5pVzWHQTCQu5gnVM.js"></script>
     <link rel="shortcut icon" href="img/favicon.ico">
-    <script src="..\AdminLTE\pages\examples\js\main1.js"></script>
+    <script src="../AdminLTE/pages/examples/js/main1.js"></script>
     <meta name="viewport" content="width=device-width">
 
     <link rel="stylesheet" href="css/bootstrap.min.css">
